tests/mysql/ui-common/top_sql_param_only_in_section_map.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/mysql/tmp-ui/top_sql_param_only_in_section_map.rs:13:20
   |
13 |                 ( :id = 1i64 ),
   |                    ^^
